git commit -m another

--- a/portfolio.html
+++ b/portfolio.html
@@ -114,7 +114,7 @@
                             </div>
                             <div class="mb-3 text-center">
                                 <button type="button" class="btn btn-dark w-100">SUBMIT</button>
-                                <h1>hii</h1>
+                                
 
                             </div>
 
@@ -130,7 +130,8 @@
                 <div class="row text-center mt-5 mb-5 text-white">
                     <footer>
                         <p&copy>@2025 My Portfolio.All right reserved</p>
-                        <p>lorem jkjdwn nkw d</p>
+                        <p>lorem</p>
+                        <h2>helllo</h2>
                     </footer>
                 </div>
             </div>
